[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-models"         
version = "0.1.0"
description = "Lightweight time-series forecasting baselines with a plugin registry."
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2.0",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "typer>=0.11",
  "joblib>=1.3",
  "pmdarima>=2.0,<3",
  "matplotlib>=3.8,<3.10"
]

[project.scripts]
fm = "forecast_models.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["forecast_models*"]

[tool.setuptools.package-data]
forecast_models = []

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
